# build-rs-hack

./: Cargo.toml  README.md  build.rs  cfg.toml
config-b/src/: lib.rs
config/src/: lib.rs
src/: main.rs
