[package]
name = "build-rs-hack"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Unlicense"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "config" }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5.7"
